# forensic-disk-imager

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  build.rs  features.md  mise.toml  package.json
frontend/: index.html  main.js  style.css
src/: acquisition.rs  app.rs  hasher.rs  main.rs  output.rs  report.rs  state.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: acquisition.rs  error.rs  hasher.rs  locked_files.rs  main.rs  memory.rs  output.rs  pdf_report.rs  ram_analysis.rs  report.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  vss.rs  windows.rs
src-tauri/src/plugins/: manager.rs  mod.rs  native.rs  types.rs  wasm.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
