[package]
name = "forgelens-disk-imager"
version = "2.0.2"
edition = "2024"

[dependencies]
tauri = { version = "2.0.0", features = ["devtools"] }
rfd = "0.14"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
flate2 = "1"                                                        # gzip compression
zstd = "0.13"                                                       # zstd compression
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
zip = "0.6"
uuid = { version = "1.0", features = ["v4"] }
crc32fast = "1.3"
rusqlite = { version = "0.31.0", features = ["bundled"] }
yara-x = "0.12"
printpdf = "0.5"
sysinfo = "0.30"
mft = "0.7.0"
ntfs = "0.4"
mbrman = "0.5.2"
gpt = "3.0"
csv = "1.3"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["ioctl", "fs"] }
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Storage_FileSystem",
    "Win32_Storage_Vss",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Com",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_Shell",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
io-kit-sys = "0.4"
libc = "0.2"

[build-dependencies]
tauri-build = "2.0.0"
winres = "0.1"
